--- a/src/app/Teller/Account-Withdraw/account-withdraw.component.html
+++ b/src/app/Teller/Account-Withdraw/account-withdraw.component.html
@@ -7,7 +7,7 @@
 
     <!--Heading-->
     <div class="brand-logo center">
-    <h3>Withdraw</h3><div ngIf="this.inProg" class="spinner-border"></div>
+    <h3>Withdraw</h3><div *ngIf="this.inProg" class="spinner-border"></div>
     </div>
     <!--Form-->
     <div class="container">
