--- a/src/app/Auth/Login/login.component.html
+++ b/src/app/Auth/Login/login.component.html
@@ -24,7 +24,7 @@
     </div>-->
 <!--Login-->
 <div class="brand-logo center">
-  <h3>Login</h3><div ngIf="this.inProg" class="spinner-border"></div>
+  <h3>Login</h3><div *ngIf="this.inProg" class="spinner-border"></div>
 </div>
 <div class="container">
   <div class="col s6 offset-s3">
@@ -69,10 +69,10 @@
               >
                 Submit
               </button>
-              <h6 style="text-align: center">
+              <!-- <h6 style="text-align: center">
                 If you don't have account?
                 <a routerLink="/Sign-Up">Sign Up Here</a>
-              </h6>
+              </h6> -->
               <br />
               <br />
             </div>
