--- a/src/app/Executive/Account-Create/account-create.component.html
+++ b/src/app/Executive/Account-Create/account-create.component.html
@@ -1,6 +1,6 @@
 <!--Heading-->
 <div class="brand-logo center">
-  <h3>Create Acount </h3> <div ngIf="this.inProg" class="spinner-border"></div>
+  <h3>Create Acount </h3> <div *ngIf="this.inProg" class="spinner-border"></div>
 </div>
 <!--Form-->
 <div class="container">
