--- a/src/app/Teller/Account-Deposit/account-deposit.component.html
+++ b/src/app/Teller/Account-Deposit/account-deposit.component.html
@@ -4,7 +4,7 @@
 
 <!--Heading-->
 <div class="brand-logo center">
-    <h3>Deposit</h3><div ngIf="this.inProg" class="spinner-border"></div>
+    <h3>Deposit</h3><div *ngIf="this.inProg" class="spinner-border"></div>
 </div>
 <!--Form-->
 <div class="container">
