--- a/src/app/Teller/Account-Transfer/account-transfer.component.html
+++ b/src/app/Teller/Account-Transfer/account-transfer.component.html
@@ -8,7 +8,7 @@
 
 <!--Heading-->
 <div class="brand-logo center">
-    <h3>Transfer</h3><div ngIf="this.inProg" class="spinner-border"></div>
+    <h3>Transfer</h3><div *ngIf="this.inProg" class="spinner-border"></div>
 </div>
 <!--Form-->
 <div class="container">
